minor fixes - rate buttons are now always visible - fixed untranslated text - mobile improvements

--- a/src/assets/mobile.css
+++ b/src/assets/mobile.css
@@ -12,9 +12,7 @@
 .mobilePicker {
     display: flex;
 }
-.menuPicker {
-    display: none;
-}
+.mobileHidden { display: none !important; }
 
 .button:not(.noMobileResize) {
     width: 8vw !important;
@@ -36,16 +34,10 @@
     height: 7.5vw !important;
 }
 
-/* Hides help text in searchTool/CommentTool */
-#pageStr, #sortStr { display: none; }
-
 .socInp { width: 40vw !important;}
 .percCollab { padding: 0.1em !important; }
 
-.humHead, .roleHead { display: none; }
-.collabStuff { display: none; }
 .mobileTabSwitcher { display: flex !important; }
-.memberStuff { display: none;}
 .roleList {appearance: none;}
 
 
@@ -109,15 +101,12 @@ ul > div {
 	right: 3px;
 	bottom: 3px;
 }
-#commButtonText { display: none;}
 .listMore {display: block !important;}
-.listOptionsContainer > button > div { display: none;}
 .listOptionsContainer button { min-width: max-content; }
 .listOptionsContainer button > img {
     width: 2em;
     padding: 0.5em;
 }
 #viewImg {display: inline;}
-#viewText {display: none;}
-#descPreviewButton > div { display: none; }
+.homeLoginInfo { width: 25em; }
 }
